Measuring time on different way

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Project1/.idea/workspace.xml
 Project1/.idea/inspectionProfiles/profiles_settings.xml
 Project1/.idea/inspectionProfiles/Project_Default.xml
 Project1/.idea/workspace.xml
+Project1/.Rhistory
