--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Project1/.idea/inspectionProfiles/profiles_settings.xml
 Project1/.idea/inspectionProfiles/Project_Default.xml
 Project1/.idea/workspace.xml
 Project1/.Rhistory
+Project1/.Rhistory
+Project1/.Rhistory
