Improvement ... think its about done

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Project1/.Rhistory
 Project1/.Rhistory
 Project1/.Rhistory
 .DS_Store
+Project5/.Rhistory
+Project4/.idea/modules.xml
+Project4/.idea/libraries/R_User_Library.xml
+*.xml
+Project3/.Rhistory
+*.xml
+Project4/.idea/misc.xml
+Project4/.idea/libraries/R_User_Library.xml
